# datafusion-vector-search-ext

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: feather_provider.rs  keys.rs  lib.rs  lookup.rs  node.rs  parquet_provider.rs  planner.rs  registry.rs  rule.rs  sqlite_provider.rs  udf.rs  udtf.rs
tests/: execution.rs  feather_provider_test.rs  optimizer_rule.rs  orderby_distance_trimmed.rs  parquet_provider_test.rs  sqlite_provider_test.rs  subquery_alias.rs  vector_col_projection.rs
