[package]
name = "datafusion-vector-search-ext"
version = "0.1.0"
edition = "2024"
description = "DataFusion extension for USearch HNSW vector similarity search with adaptive WHERE clause filtering"
license = "MIT OR Apache-2.0"

[features]
parquet-provider = ["dep:parquet", "dep:object_store", "dep:bytes"]
sqlite-provider  = ["dep:rusqlite", "dep:serde_json", "dep:parquet"]

[dependencies]
tracing      = "0.1"
datafusion   = "52.2.0"
usearch      = "2.24.0"
arrow-array  = "57.2.0"
arrow-schema = "57.2.0"
async-trait  = "0.1"
futures      = "0.3"
# "sync" adds tokio::sync::Semaphore, used by SqliteLookupProvider's connection pool
tokio        = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

# parquet-provider
parquet      = { version = "57.2.0", optional = true, features = ["async", "object_store"] }
object_store = { version = "0.12",   optional = true }
bytes        = { version = "1",      optional = true }

# sqlite-provider
rusqlite     = { version = "0.32", optional = true, features = ["bundled"] }
serde_json   = { version = "1",    optional = true }

[dev-dependencies]
tokio    = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
