[package]
name = "datafusion-vector-search-ext"
version = "0.1.0"
edition = "2024"
description = "DataFusion extension for USearch HNSW vector similarity search with adaptive WHERE clause filtering"
license = "MIT OR Apache-2.0"

[features]
parquet-provider = ["dep:parquet", "dep:object_store", "dep:bytes"]
sqlite-provider  = ["dep:rusqlite", "dep:serde_json", "dep:parquet"]
feather-provider = ["dep:arrow-ipc", "dep:memmap2", "dep:tempfile"]

[dependencies]
tracing      = "0.1"
datafusion   = "53"
usearch      = "2.24.0"
arrow-array  = "58"
arrow-schema = "58"
async-trait  = "0.1"
futures      = "0.3"
# "sync" adds tokio::sync::Semaphore, used by SqliteLookupProvider's connection pool
tokio        = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

# parquet-provider
parquet      = { version = "58", optional = true, features = ["async", "object_store"] }
object_store = { version = "0.13",   optional = true }
bytes        = { version = "1",      optional = true }

# sqlite-provider
rusqlite     = { version = "0.32", optional = true, features = ["bundled"] }
serde_json   = { version = "1",    optional = true }

# feather-provider — Arrow IPC (Feather v2). `take`/`concat_batches`/`interleave`
# come from `datafusion::arrow::compute`; the extra deps are the IPC reader/writer,
# `memmap2` for the zero-copy mmap read path, and `tempfile` for the bounded-memory
# (spill-sort) build path.
arrow-ipc    = { version = "58", optional = true }
memmap2      = { version = "0.9", optional = true }
tempfile     = { version = "3",   optional = true }

[dev-dependencies]
tokio    = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
